plugins {
	id "fabric-loom" version "1.9-SNAPSHOT"
	id "io.freefair.lombok" version "8.6"
}

base {
	archivesName = project.archives_base_name
}

version = "${project.mod_version}-${project.build_game_version}"
group = project.maven_group

repositories {
	maven {
		url = "https://jitpack.io"
	}
	flatDir {
		dirs("lib")
	}
}

loom {
	accessWidenerPath = file("src/main/resources/twitchemotes.accesswidener")
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	include implementation(group: "webpdecoderjn", name: "WebPDecoderJN-1.3", version: "1.3")

	include implementation(group: "net.java.dev.jna", name: "jna", version: project.jna_version)
	include implementation(group: "net.java.dev.jna", name: "jna-platform", version: project.jna_version)

	include implementation(group: "com.github.gikkman", name: "Java-Twirk", version: project.twirk_version)
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}" }
	}
}
